scode/test1/prob15/error.txt
main.cpp:1:1: error: 'zqof' does not name a type
    1 | zqof
      | ^~~~
